--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "kyslik/column-sortable": "^6.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.50",
         "overtrue/laravel-favorite": "2.0.3"
     },
